<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 회원가입 실패 및 미완료 -->

    <ImageView
        android:id="@+id/iv_incomplete_join"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/label_category"
        android:src="@drawable/ic_bell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_bell" />


    <TextView
        android:id="@+id/tv_text_fail_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/t_font_medium"
        android:text="@string/tvjoinfail"
        android:textColor="@color/smart_fail_red"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_incomplete_join" />

    <Button
        android:id="@+id/bt_retry_back"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/smart_white"
        android:fontFamily="@font/t_font_medium"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/tvretry"
        android:textColor="@color/smart_sky"
        android:textSize="14sp"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/smart_sky"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/tv_text_fail_message_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/t_font"
        android:text="@string/tvfailmessagejoin"
        android:textColor="@color/smart_grey_03"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/bt_retry_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_text_fail_message_detail_re"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/t_font"
        android:text="@string/tvfailmessagejoinre"
        android:textColor="@color/smart_grey_03"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text_fail_message_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>