<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="LiveDataModel"
            type="com.smart.app.ui.tutorials.entitytype.LiveDataModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 일정(스케쥴) 작성 & 수정 액티비티 / p5. 여행일정2 -->

        <ImageView
            android:id="@+id/iv_unreal_back_simple"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/label_category"
            android:src="@drawable/ic_unreal_back_page_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_simple_complete_edit_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{LiveDataModel.isUpdate().testOne ?? `완료`}"
            tools:text="완료" />


        <EditText
            android:id="@+id/plain_text_input0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="80dp"
            android:autofillHints="name"
            android:background="@android:color/transparent"
            android:hint="@string/hint_schedule_name"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/plain_text_input1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="40dp"
            android:autofillHints="name"
            android:background="@android:color/transparent"
            android:hint="@string/hint_location_search"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plain_text_input0" />

        <EditText
            android:id="@+id/plain_text_input2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="40dp"
            android:autofillHints="name"
            android:background="@android:color/transparent"
            android:hint="@string/hint_schedule_time"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plain_text_input1" />

        <EditText
            android:id="@+id/plain_text_input3"
            android:layout_width="330dp"
            android:layout_height="440dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="40dp"
            android:autofillHints="name"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/et_hint_memo_value"
            android:inputType="text"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plain_text_input2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>