<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 회원가입 완료 -->

    <ImageView
        android:id="@+id/iv_complete_notice_check"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/label_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_checkmark3_purple"
        tools:srcCompat="@drawable/ic_checkmark3_purple" />


    <TextView
        android:id="@+id/tv_explore_without_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_join_complete_message"
        android:textSize="22sp"
        android:fontFamily="@font/t_font_medium"
        android:textColor="@color/smart_black_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_complete_notice_check" />

    <Button
        android:id="@+id/bt_finish_end"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/smart_white"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/bt_finish_end_text_value"
        android:textColor="@color/smart_sky"
        android:textSize="14sp"
        android:fontFamily="@font/t_font_medium"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/smart_sky"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>